vpc-demo.tf
# Configure the AWS Provider
provider "aws" {
  region  = "us-west-2"
}

resource "aws_vpc" "demo" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "demovpc"
  }
}
